@@ -92,3 +92,12 @@ setMethod("crosscorr.plot", "codaMCMC", function(x, ...)
     crosscorr.plot(as(x, "MCMClist"), ...))
 setMethod("crosscorr.plot", "MCMClist", function(x, ...) 
     coda:::crosscorr.plot(x, ...))
+
+setGeneric("gelman.plot", function(x, ...) 
+    standardGeneric("gelman.plot"))
+setMethod("gelman.plot", "dcmle", function(x, ...) 
+    gelman.plot(as(x, "MCMClist"), ...))
+setMethod("gelman.plot", "codaMCMC", function(x, ...) 
+    gelman.plot(as(x, "MCMClist"), ...))
+setMethod("gelman.plot", "MCMClist", function(x, ...) 
+    coda:::gelman.plot(x, ...))
